--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,17 +4,20 @@ $color-black-secondary: #555;
 
 $color-white-primary: #fdfdff;
 $color-white-secondary: #fafafa;
-$color-white-tertiary: #f5f5f5;
+$color-white-tertiary: #f4f4f5;
 
 $color-primary-light: #f9ab16;
+$color-primary-medium: hsl(39, 95%, 47%);
 $color-primary-dark: #d9741d;
 
 $color-secondary: #1a084a;
 
 // FONT-SIZES
 $font-size-heading1: 56px;
+$font-size-heading1-mob: 40px;
 $font-size-heading2: 40px;
+$font-size-heading2-mob: 32px;
 $font-size-heading3: 24px;
 
-$font-size-body-heading: 20px;
+$font-size-body-bold: 20px;
 $font-size-body: 18px;
