--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 // abstracts
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 // base
 @import 'base/typography';
@@ -7,3 +8,10 @@
 // layout
 @import 'layout/navbar';
 @import 'layout/hero';
+@import 'layout/footer';
+
+// pages
+@import 'pages/home';
+
+// components
+@import 'components/button';
