--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,7 +41,7 @@ h3 {
 }
 
 p {
-    line-height: 150%;
+    line-height: 140%;
 }
 
 .section {
@@ -54,6 +54,12 @@ p {
     &.schedule {
         color: $color-white-primary;
     }
+
+    .text-content {
+        p {
+            margin-bottom: 1.5rem;
+        }
+    }
 }
 
 
@@ -65,6 +71,6 @@ footer {
 
 .hero {
     h1 {
-        margin-bottom: 1.5rem;
+        margin-bottom: 1rem;
     }
 }
