changed purply bg

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,6 +11,7 @@ $color-primary-medium: hsl(39, 95%, 47%);
 $color-primary-dark: #d9741d;
 
 $color-secondary: #1a084a;
+$color-secondary-light: hsl(256, 90%, 90%);
 
 // FONT-SIZES
 $font-size-heading1: 56px;
