--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -11,7 +11,7 @@
     }
 
     &.about {
-        background-color: rgb(219, 211, 244);
+        background-color: $color-secondary-light;
 
         .side-image {
             img {
