--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ footer .social ul li:not(:first-child) {
   margin-top: 5rem;
 }
 .section.about {
-  background-color: #dbcffc;
+  background-color: #e7e1fa;
 }
 .section.about .side-image img {
   margin-top: 1.5rem;
