limit images sizes growing

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,9 @@ footer .social ul li:not(:first-child) {
 }
 .section .side-image img {
   width: 100%;
+  max-width: 350px;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 5rem;
 }
 .section.about {
