--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,6 +6,9 @@
     .side-image {
         img {
             width: 100%;
+            max-width: 350px;
+            margin-left: auto;
+            margin-right: auto;
             margin-top: 5rem;
         }
     }
