about bg orange

--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ footer .social ul li:not(:first-child) {
   margin-top: 5rem;
 }
 .section.about {
-  background-color: #e7e1fa;
+  background-color: #f9c86bc4;
 }
 .section.about .side-image img {
   margin-top: 1.5rem;
