--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
     }
 
     &.about {
-        background-color: #f9c86bc4;
+        background-color:$color-secondary-light;
 
         .side-image {
             img {
