--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -2,12 +2,13 @@
     &::before {
         content: "";
         background-image: url($location);
-        width: 115px;
-        height: 115px;
+        background-size: cover;
+        width: 100px;
+        height: 100px;
         display: block;
         position: absolute;
-        top: -3.725rem;
-        opacity: 0.7;
+        top: -2rem;
+        opacity: 0.65;
         z-index: 100;
     }
 }
