--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,8 +6,8 @@ $color-white-primary: #fdfdff;
 $color-white-secondary: #fafafa;
 $color-white-tertiary: #f2f2f4;
 
-$color-primary-lightest: hsl(39, 70%, 95%);
-$color-primary-light: #f9ab16;
+$color-primary-lightest: hsl(39, 70%, 92%);
+$color-primary-light: #f7bd53;
 $color-primary-medium: hsl(39, 95%, 47%);
 $color-primary-dark: #d9741d;
 
