--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -36,6 +36,8 @@ h3 {
 
 #brand-text {
     font-family: 'Times New Roman', Times, serif;
+    // font-family: 'Roboto', 'Segoe UI', sans-serif;
+    font-weight: 500;
     text-transform: uppercase;
     color: $color-secondary;
 }
