--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -12,6 +12,7 @@ h1 {
     font-family: 'Poppins', 'Segoe UI', Tahoma, sans-serif;
     font-weight: 700;
     line-height: 105%;
+    letter-spacing: -0.3px;
 
     @media only screen and (min-width: 768px) {
         font-size: $font-size-heading1;
@@ -43,7 +44,7 @@ h3 {
 }
 
 p {
-    line-height: 140%;
+    line-height: 160%;
 }
 
 .section {
