--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -6,6 +6,16 @@
     width: 100%;
     border: 1px solid $color-white-tertiary;
 
+    .nav-link {
+        padding-top: 5px;
+        padding-bottom: 5px;
+
+        &.active {
+            color: $color-primary-dark;
+            background-color: $color-white-tertiary;
+        }
+    }
+
     &-brand {
         .logo {
             display: inline-block;
