--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -7,13 +7,22 @@
     border: 1px solid $color-white-tertiary;
 
     &-nav {
+        margin-top: 12px;
+        border-top: 1px solid $color-secondary-light;
+
         a.nav-link {
-            padding-top: 5px;
-            padding-bottom: 5px;
+            padding-top: 12px;
+            padding-bottom: 12px;
     
+        }
+
+        .nav-item {
             &.active {
-                color: $color-primary-dark;
                 background-color: $color-white-tertiary;
+
+                a.nav-link {
+                    color: $color-primary-dark !important;
+                }
             }
         }
     }
