--- a/css/style.css
+++ b/css/style.css
@@ -64,14 +64,14 @@ p {
   display: block;
   position: absolute;
   top: -2rem;
-  opacity: 0.15;
+  opacity: 0.25;
   z-index: 100;
 }
 .section.schedule {
   color: #fdfdff;
 }
 .section .text-content p {
-  margin-bottom: 1.5rem;
+  margin-bottom: 0rem;
 }
 
 footer h3 {
@@ -162,7 +162,8 @@ footer .social ul li:not(:first-child) {
 }
 
 .section {
-  box-sizing: content-box;
+  min-height: 35rem;
+  box-sizing: border-box;
   padding: 10rem 0;
   position: relative;
 }
@@ -214,7 +215,7 @@ footer .social ul li:not(:first-child) {
   display: block;
   position: absolute;
   top: -2rem;
-  opacity: 0.15;
+  opacity: 0.25;
   z-index: 100;
 }
 .section.schedule .container .info {
@@ -222,6 +223,20 @@ footer .social ul li:not(:first-child) {
 }
 .section.schedule .container .highlight {
   color: #f7bd53;
+}
+
+.messages {
+  background-color: #fafafa;
+}
+.messages .card {
+  background-color: #fdfdff;
+  box-shadow: 0px 1rem 1.4rem rgba(242, 242, 244, 0.8), 0 8px rgba(242, 242, 244, 0.5);
+}
+.messages .card img {
+  width: 100%;
+}
+.messages .card .text-content {
+  padding: 1rem;
 }
 
 .btn {
@@ -244,16 +259,63 @@ footer .social ul li:not(:first-child) {
   background-color: #ea9a06;
 }
 .btn-sec {
+  padding: 16px 32px;
+  color: #ea9a06;
+  margin-top: 2rem;
+  display: inline-block;
+  position: relative;
+  min-width: 100%;
+  text-transform: uppercase;
+  overflow: hidden;
   background-color: transparent;
-  color: #4a17d3;
-  text-decoration: none;
-  padding-bottom: 0.5rem;
-  border-bottom: 2px solid #4a17d3;
+  z-index: 10;
+  text-align: center;
+  transition: color 0s 0.15s ease-out;
+  font-size: 16px;
+  font-weight: 500;
+}
+.btn-sec:before {
+  content: "";
+  width: 120%;
+  height: 100%;
+  transform: skewX(-45deg);
+  background-color: #ea9a06;
+  display: inline-block;
+  position: absolute;
+  left: -125%;
+  top: 0;
+  transition: all 0.2s ease-out;
+}
+.btn-sec:after {
+  content: "";
+  border: 1px solid #f7bd53;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 .btn-sec:hover {
-  color: #2a0d77;
-  border-bottom: 2px solid #2a0d77;
+  color: #fdfdff;
   text-decoration: none;
+  z-index: 10;
+}
+.btn-sec:hover:before {
+  content: "";
+  width: 120%;
+  height: 100%;
+  transform: skewX(-45deg);
+  background-color: #ea9a06;
+  display: inline-block;
+  position: absolute;
+  left: -10%;
+  top: 0;
+  z-index: -1;
+}
+@media screen and (min-width: 768px) {
+  .btn-sec {
+    min-width: 0%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
