--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -19,16 +19,65 @@
     }
 
     &-sec {
+        padding: 16px 32px;
+        color: $color-primary-medium;
+        margin-top: 2rem;
+        display: inline-block;
+        position: relative;
+        min-width: 100%;
+        text-transform: uppercase;
+        overflow: hidden;
         background-color: transparent;
-        color: hsl(256, 80%, 46%);
-        text-decoration: none;
-        padding-bottom: 0.5rem;
-        border-bottom: 2px solid hsl(256, 80%, 46%);
+        z-index: 10;
+        text-align: center;
+        transition: color 0s 0.15s ease-out;
+        font-size: 16px;
+        font-weight: 500;
+
+        &:before {
+            content: "";
+            width: 120%;
+            height: 100%;
+            transform: skewX(-45deg);
+            background-color: $color-primary-medium;
+            display: inline-block;
+            position: absolute;
+            left: -125%;
+            top: 0;
+            transition: all 0.2s ease-out;
+        }
+
+        &:after {
+            content: '';
+            border: 1px solid $color-primary-light;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
 
         &:hover {
-            color: hsl(256, 80%, 26%);
-            border-bottom: 2px solid hsl(256, 80%, 26%);
+            color: $color-white-primary;
             text-decoration: none;
+            z-index: 10;
+
+            &:before {
+                content: "";
+                width: 120%;
+                height: 100%;
+                transform: skewX(-45deg);
+                background-color: $color-primary-medium;
+                display: inline-block;
+                position: absolute;
+                left: -10%;
+                top: 0;
+                z-index: -1;
+            }
+        }
+
+        @media screen and (min-width: 768px){
+            min-width: 0%;
         }
     }
 }
