--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -72,7 +72,7 @@
 
     .card {
         background-color: $color-white-primary;
-        box-shadow: 0px 1rem 1.4rem rgba($color-white-tertiary, 0.8), 0 8px rgba($color-white-tertiary, 0.5);
+        box-shadow: 0px 1rem 1.4rem rgba($color-white-tertiary, 0.8), 0 8px 4px rgba($color-white-tertiary, 0.5);
 
         img {
             width: 100%;
