--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -80,6 +80,14 @@
 
         .text-content {
             padding: 1rem;
+
+            h3 {
+                margin: 8px 0 16px;
+            }
+
+            .btn-sec {
+                margin-top: 1.5rem;
+            }
         }
     }
 }
