--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,6 +9,7 @@
     border-radius: 3px;
     min-width: 100%;
     text-transform: uppercase;
+    border-radius: 4px;
 
     @media screen and (min-width: 768px){
         min-width: 0%;
@@ -33,6 +34,7 @@
         transition: color 0s 0.15s ease-out;
         font-size: 16px;
         font-weight: 500;
+        border-radius: 4px;
 
         &:before {
             content: "";
@@ -55,6 +57,7 @@
             position: absolute;
             left: 0;
             top: 0;
+            border-radius: 4px;
         }
 
         &:hover {
