--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -90,6 +90,10 @@
                 margin-top: 0rem;
             }
         }
+
+        &:last-child {
+            margin-top: 2rem;
+        }
     }
 }
 
