added desktop views

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -16,6 +16,7 @@ $color-secondary-light: hsl(256, 50%, 96%);
 
 // FONT-SIZES
 $font-size-heading1: 56px;
+$font-size-heading1-tab: 48px;
 $font-size-heading1-mob: 40px;
 $font-size-heading2: 40px;
 $font-size-heading2-mob: 32px;
