--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,15 @@ h1 {
 }
 @media only screen and (min-width: 768px) {
   h1 {
+    font-size: 40px;
+  }
+}
+@media only screen and (min-width: 992px) {
+  h1 {
     font-size: 56px;
+    line-height: 100%;
+    margin-bottom: 1.5rem;
+    margin-top: 1rem;
   }
 }
 
@@ -82,6 +90,10 @@ footer h3 {
   margin-bottom: 1rem;
 }
 
+.spacer {
+  height: 0.8rem;
+}
+
 .navbar {
   background-color: #fdfdff;
   position: fixed;
@@ -121,6 +133,15 @@ footer h3 {
   border: none;
   padding: 0.5rem;
 }
+@media only screen and (min-width: 768px) {
+  .navbar-nav {
+    margin-top: 0px;
+    border: none;
+  }
+  .navbar-nav .nav-item.active {
+    background-color: white;
+  }
+}
 
 .hero {
   min-height: 35rem;
@@ -128,14 +149,46 @@ footer h3 {
   padding: 8rem 0 10rem;
   background: #faf1e1;
 }
+.hero .featured-image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .hero .featured-image img {
   margin-top: 5rem;
-  width: 100%;
+  width: clamp(310px, 100%, 350px);
+}
+@media only screen and (min-width: 768px) {
+  .hero {
+    padding: 10rem 0 8rem;
+  }
+  .hero .featured-image {
+    height: 100%;
+  }
+  .hero .featured-image img {
+    height: 100%;
+    margin-top: 0rem;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .hero {
+    padding: 12rem 0 8rem;
+  }
+  .hero .featured-image {
+    height: 100%;
+  }
+  .hero .featured-image img {
+    width: 100%;
+    margin-top: -5rem;
+  }
+  .hero .text-content {
+    padding-right: 3rem;
+  }
 }
 
 footer {
   background-color: #1a084a;
-  padding: 8.8rem 2rem 6.4rem;
+  padding: 5rem 2rem;
 }
 footer > *:not(:first-child) {
   margin-top: 4.8rem;
@@ -160,6 +213,15 @@ footer .social ul li {
 footer .social ul li:not(:first-child) {
   margin-left: 1.5rem;
 }
+@media screen and (min-width: 768px) {
+  footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  footer > *:not(:first-child) {
+    margin-top: 0rem;
+  }
+}
 
 .section {
   min-height: 35rem;
@@ -169,13 +231,13 @@ footer .social ul li:not(:first-child) {
 }
 .section .side-image {
   width: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 .section .side-image img {
-  width: 100%;
-  max-width: 350px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 5rem;
+  width: clamp(310px, 100%, 350px);
+  margin: 5rem auto 0;
 }
 .section.about {
   background-color: #fafafa;
@@ -184,7 +246,7 @@ footer .social ul li:not(:first-child) {
   width: 100%;
 }
 .section.about .side-image img {
-  margin-top: 1.5rem;
+  margin: 1.5rem auto 0;
 }
 .section.soul-winning {
   background-color: #f2f0fa;
@@ -224,6 +286,76 @@ footer .social ul li:not(:first-child) {
 .section.schedule .container .highlight {
   color: #f7bd53;
 }
+@media only screen and (min-width: 768px) {
+  .section {
+    padding: 7rem 0;
+  }
+  .section.about .container .gr {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-template-rows: 1fr;
+  }
+  .section.about .container .gr .text-content {
+    grid-column: 2/3;
+    margin-left: 3rem;
+  }
+  .section.about .container .gr .side-image {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .section.soul-winning .container .row {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+  }
+  .section.soul-winning .container .row .text-content {
+    margin-right: 3rem;
+  }
+  .section.soul-winning .container .row .side-image img {
+    align-self: center;
+    width: auto;
+    margin-top: 0px;
+  }
+  .section.schedule h2 {
+    margin-bottom: 2rem;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .section {
+    padding: 8rem 0 6rem;
+  }
+  .section.about .container .gr {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+  }
+  .section.about .container .gr .text-content {
+    grid-column: 2/3;
+    margin-left: 3rem;
+    padding-right: 5rem;
+  }
+  .section.about .container .gr .side-image {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .section.about .container .gr .side-image img {
+    margin-top: -3.5rem;
+  }
+  .section.soul-winning .container .row {
+    display: grid;
+    grid-template-columns: 3fr 3fr;
+  }
+  .section.soul-winning .container .row .text-content {
+    margin-right: 3rem;
+    padding-right: 3rem;
+  }
+  .section.soul-winning .container .row .side-image img {
+    align-self: center;
+    width: auto;
+    margin-top: 0px;
+  }
+  .section.schedule h2 {
+    margin-bottom: 2rem;
+  }
+}
 
 .messages {
   background-color: #fafafa;
@@ -232,9 +364,14 @@ footer .social ul li:not(:first-child) {
   background-color: #fdfdff;
   box-shadow: 0px 1rem 1.4rem rgba(242, 242, 244, 0.8), 0 8px 4px rgba(242, 242, 244, 0.5);
   margin-top: 1rem;
+  width: clamp(310px, 100%, 400px);
 }
 .messages .card img {
-  width: 100%;
+  width: clamp(310px, 100%, 400px);
+}
+.messages .card iframe {
+  width: clamp(310px, 100%, 400px);
+  min-height: 310px;
 }
 .messages .card .text-content {
   padding: 1rem;
@@ -248,26 +385,136 @@ footer .social ul li:not(:first-child) {
 .messages .card:last-child {
   margin-top: 3rem;
 }
+.messages .card:last-child iframe {
+  min-height: 20rem;
+}
+@media screen and (min-width: 768px) {
+  .messages .card {
+    margin-top: 0px;
+    width: 328px;
+    margin-right: 1rem;
+  }
+  .messages .card img {
+    width: 328px;
+  }
+  .messages .card iframe {
+    width: 328px;
+    height: 328px;
+  }
+  .messages .card:last-child {
+    margin-top: 0px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .messages {
+    padding: 6rem 0;
+  }
+  .messages .card {
+    width: 386px;
+  }
+  .messages .card img {
+    width: 386px;
+  }
+  .messages .card iframe {
+    width: 495px;
+    height: 386px;
+  }
+  .messages .card:last-child {
+    width: 495px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .messages {
+    padding: 6rem 0;
+  }
+  .messages .card {
+    width: 386px;
+  }
+  .messages .card img {
+    width: 386px;
+  }
+  .messages .card iframe {
+    width: 520px;
+    height: 386px;
+  }
+  .messages .card:last-child {
+    width: 520px;
+  }
+}
+
+.wrap {
+  max-width: 920px;
+}
+@media screen and (min-width: 1024px) {
+  .wrap {
+    max-width: 1000px;
+  }
+}
 
 .btn {
-  padding: 1rem 2rem;
-  background-color: #f7bd53;
-  font-size: 16px;
-  font-weight: 500;
-  margin-top: 1rem;
+  padding: 16px 32px;
   color: #1a084a;
-  border-radius: 3px;
+  margin-top: 0.5rem;
+  display: inline-block;
+  position: relative;
   min-width: 100%;
   text-transform: uppercase;
+  overflow: hidden;
+  background-color: transparent;
+  z-index: 10;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
   border-radius: 4px;
+}
+.btn:before {
+  content: "";
+  width: 120%;
+  height: 100%;
+  transform: skewX(-45deg);
+  background-color: #ea9a06;
+  display: inline-block;
+  position: absolute;
+  left: -123%;
+  top: 0;
+  transition: all 0.2s ease-out;
+  z-index: -1;
+}
+.btn:after {
+  content: "";
+  border: 1px solid #f7bd53;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border-radius: 4px;
+  background-color: #f7bd53;
+  z-index: -2;
+}
+.btn:hover {
+  text-decoration: none;
+}
+.btn:hover:before {
+  content: "";
+  transform: skewX(-45deg);
+  background-color: #ea9a06;
+  display: inline-block;
+  position: absolute;
+  left: -10%;
+  top: 0;
 }
 @media screen and (min-width: 768px) {
   .btn {
     min-width: 0%;
   }
-}
-.btn:hover {
-  background-color: #ea9a06;
+  .btn:before {
+    width: 130%;
+    left: -133%;
+  }
+  .btn:hover:before {
+    left: -15%;
+  }
 }
 .btn-sec {
   padding: 16px 32px;
@@ -294,7 +541,7 @@ footer .social ul li:not(:first-child) {
   background-color: #ea9a06;
   display: inline-block;
   position: absolute;
-  left: -125%;
+  left: -123%;
   top: 0;
   transition: all 0.2s ease-out;
 }
@@ -315,8 +562,6 @@ footer .social ul li:not(:first-child) {
 }
 .btn-sec:hover:before {
   content: "";
-  width: 120%;
-  height: 100%;
   transform: skewX(-45deg);
   background-color: #ea9a06;
   display: inline-block;
@@ -328,6 +573,13 @@ footer .social ul li:not(:first-child) {
 @media screen and (min-width: 768px) {
   .btn-sec {
     min-width: 0%;
+  }
+  .btn-sec:before {
+    width: 130%;
+    left: -133%;
+  }
+  .btn-sec:hover:before {
+    left: -15%;
   }
 }
 
