--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,23 +1,77 @@
 .btn {
-    padding: 1rem 2rem;
-    background-color: $color-primary-light;
-    font-size: 16px;
-    font-weight: 500;
-    // box-shadow: 0 1rem 1.5rem rgba($color-primary-dark, 0.2);
-    margin-top: 1rem;
+    padding: 16px 32px;
     color: $color-secondary;
-    border-radius: 3px;
+    margin-top: 0.5rem;
+    display: inline-block;
+    position: relative;
     min-width: 100%;
     text-transform: uppercase;
+    overflow: hidden;
+    background-color: transparent;
+    z-index: 10;
+    text-align: center;
+    // transition: color 0s 0.15s ease-out;
+    font-size: 16px;
+    font-weight: 500;
     border-radius: 4px;
 
-    @media screen and (min-width: 768px){
-        min-width: 0%;
+    &:before {
+        content: "";
+        width: 120%;
+        height: 100%;
+        transform: skewX(-45deg);
+        background-color: $color-primary-medium;
+        display: inline-block;
+        position: absolute;
+        left: -123%;
+        top: 0;
+        transition: all 0.2s ease-out;
+        z-index: -1;
+    }
+
+    &:after {
+        content: '';
+        border: 1px solid $color-primary-light;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        border-radius: 4px;
+        background-color: $color-primary-light;
+        z-index: -2;
     }
 
     &:hover {
-        background-color: $color-primary-medium;
+        text-decoration: none;
+
+        &:before {
+            content: "";
+            transform: skewX(-45deg);
+            background-color: $color-primary-medium;
+            display: inline-block;
+            position: absolute;
+            left: -10%;
+            top: 0;
+        }
     }
+
+    @media screen and (min-width: 768px){
+        min-width: 0%;
+        &:before {
+            width: 130%;
+            left: -133%;
+        }
+        &:hover {
+            &:before {
+                left: -15%;
+            }
+        }
+    }
+
+    // &:hover {
+    //     background-color: $color-primary-medium;
+    // }
 
     &-sec {
         padding: 16px 32px;
@@ -44,7 +98,7 @@
             background-color: $color-primary-medium;
             display: inline-block;
             position: absolute;
-            left: -125%;
+            left: -123%;
             top: 0;
             transition: all 0.2s ease-out;
         }
@@ -67,8 +121,6 @@
 
             &:before {
                 content: "";
-                width: 120%;
-                height: 100%;
                 transform: skewX(-45deg);
                 background-color: $color-primary-medium;
                 display: inline-block;
@@ -81,6 +133,16 @@
 
         @media screen and (min-width: 768px){
             min-width: 0%;
+
+            &:before {
+                width: 130%;
+                left: -133%;
+            }
+            &:hover {
+                &:before {
+                    left: -15%;
+                }
+            }
         }
     }
 }
