--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     background-color: $color-secondary;
-    padding: 8.8rem 2rem 6.4rem;
+    padding: 5rem 2rem;
 
     &>*:not(:first-child){
         margin-top: 4.8rem;
@@ -36,6 +36,15 @@ footer {
                     margin-left: 1.5rem;
                 }
             }
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+
+        &>*:not(:first-child){
+            margin-top: 0rem;
         }
     }
 }
