--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -48,4 +48,17 @@
         border: none;
         padding: 0.5rem;
     }
+
+    @media only screen and (min-width: 768px) {
+        &-nav {
+            margin-top: 0px;
+            border: none;
+
+            .nav-item {
+                &.active {
+                    background-color: white;
+                }
+            }
+        }
+    }
 }
