--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,13 +6,14 @@
 
     .side-image {
         width: 100%;
+        display: flex;
+        align-content: center;
+        justify-content: center;
 
         img {
-            width: 100%;
-            max-width: 350px;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 5rem;
+            width: clamp(310px, 100%, 350px);
+            // max-width: 350px;
+            margin: 5rem auto 0;
         }
     }
 
@@ -23,7 +24,7 @@
             width: 100%;
 
             img {
-                margin-top: 1.5rem;
+                margin: 1.5rem auto 0;
             }
         }
     }
@@ -65,6 +66,106 @@
             }
         }
     }
+
+    @media only screen and (min-width: 768px) {
+        padding: 7rem 0;
+
+        &.about {
+
+            .container .gr {
+                display: grid;
+                grid-template-columns: 2fr 3fr;
+                grid-template-rows: 1fr;
+
+                .text-content {
+                    grid-column: 2/3;
+                    margin-left: 3rem;
+                }
+                .side-image {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                }
+            } 
+        }
+
+        &.soul-winning {
+            .container .row {
+                display: grid;
+                grid-template-columns: 3fr 2fr;
+
+                .text-content {
+                    margin-right: 3rem;
+                }
+                
+                .side-image {
+                    img {
+                        align-self: center;
+                        width: auto;
+                        margin-top: 0px;
+                    }
+                }
+            }
+        }
+
+        &.schedule {
+            h2 {
+                margin-bottom: 2rem;
+            }
+        }
+    }
+
+    @media only screen and (min-width: 992px) {
+        padding: 8rem 0 6rem;
+
+
+        &.about {
+
+            .container .gr {
+                display: grid;
+                grid-template-columns: 2fr 3fr;
+
+                .text-content {
+                    grid-column: 2/3;
+                    margin-left: 3rem;
+                    padding-right: 5rem;
+                }
+                .side-image {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+
+                    img {
+                        margin-top: -3.5rem;
+                    }
+                }
+            } 
+        }
+
+        &.soul-winning {
+            .container .row {
+                display: grid;
+                grid-template-columns: 3fr 3fr;
+
+                .text-content {
+                    margin-right: 3rem;
+                    padding-right: 3rem;
+                }
+                
+                .side-image {
+                    img {
+                        align-self: center;
+                        width: auto;
+                        margin-top: 0px;
+                    }
+                }
+            }
+        }
+
+        &.schedule {
+            h2 {
+                margin-bottom: 2rem;
+            }
+        }
+    }
 }
 
 .messages {
@@ -74,9 +175,15 @@
         background-color: $color-white-primary;
         box-shadow: 0px 1rem 1.4rem rgba($color-white-tertiary, 0.8), 0 8px 4px rgba($color-white-tertiary, 0.5);
         margin-top: 1rem;
+        width: clamp(310px, 100%, 400px);
 
         img {
-            width: 100%;
+            width: clamp(310px, 100%, 400px);
+        }
+
+        iframe {
+            width: clamp(310px, 100%, 400px);
+            min-height: 310px;
         }
 
         .text-content {
@@ -93,6 +200,73 @@
 
         &:last-child {
             margin-top: 3rem;
+
+            iframe {
+                min-height: 20rem;
+            }
+        }
+    }
+
+    @media screen and (min-width:768px) {
+        .card {
+            margin-top: 0px;
+            width: 328px;
+            margin-right: 1rem;
+
+            img {
+                width: 328px;
+            }
+
+            iframe {
+                width: 328px;
+                height: 328px;
+            }
+
+            &:last-child {
+                margin-top: 0px;
+            }
+        }
+    }
+
+    @media screen and (min-width: 992px) {
+        padding: 6rem 0;
+
+        .card {
+            width: 386px;
+
+            img {
+                width: 386px;
+            }
+
+            iframe {
+                width: 495px;
+                height: 386px;
+            }
+
+            &:last-child {
+                width: 495px;
+            }
+        }
+    }
+    @media screen and (min-width: 1024px) {
+        padding: 6rem 0;
+        
+
+        .card {
+            width: 386px;
+
+            img {
+                width: 386px;
+            }
+
+            iframe {
+                width: 520px;
+                height: 386px;
+            }
+
+            &:last-child {
+                width: 520px;
+            }
         }
     }
 }
@@ -100,3 +274,11 @@
 // .soul-winning {
 //     background-image: linear-gradient(to top, $color-white-primary 5%, $color-white-tertiary 35%, $color-white-tertiary 100%);
 // }
+
+.wrap {
+    max-width: 920px;
+
+    @media screen and (min-width: 1024px) {
+        max-width: 1000px;
+    }
+}
