changed footer color

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ footer h3 {
 }
 
 footer {
-  background-color: #1a084a;
+  background-color: #1c1b26;
   padding: 5rem 2rem;
 }
 footer > *:not(:first-child) {
