--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: $color-secondary;
+    background-color: #1c1b26;
     padding: 5rem 2rem;
 
     &>*:not(:first-child){
