--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@ html {
 // pages
 @import 'pages/home';
 @import 'pages/about';
+@import 'pages/books';
 
 // components
 @import 'components/button';
