--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -105,4 +105,22 @@ article {
             font-size: $font-size-heading1-tab;
         }
     }    
+
+    .book-title {
+        font-weight: 500;
+        font-size: $font-size-heading2-mob;
+        letter-spacing: 0.5px;
+        // font-family: 'roboto', sans-serif;
+    }
+
+    small {
+        font-style: italic;
+        color: $color-black-secondary;
+    }
+
+    .intro {
+        font-size: 16px;
+        line-height: 145%;
+        margin-top: 0.5rem;
+    }
 } 
