--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -25,7 +25,7 @@
         position: absolute;
         left: -123%;
         top: 0;
-        transition: all 0.2s ease-out;
+        transition: all 0.15s ease-out;
         z-index: -1;
     }
 
@@ -85,7 +85,7 @@
         background-color: transparent;
         z-index: 10;
         text-align: center;
-        transition: color 0s 0.15s ease-out;
+        transition: color 0s 0.1s ease-out;
         font-size: 16px;
         font-weight: 500;
         border-radius: 4px;
@@ -100,7 +100,7 @@
             position: absolute;
             left: -123%;
             top: 0;
-            transition: all 0.2s ease-out;
+            transition: all 0.15s ease-out;
         }
 
         &:after {
@@ -144,6 +144,21 @@
                 }
             }
         }
+
+        @media screen and (min-width: 992px){
+            min-width: 0%;
+
+            &:before {
+                width: 135%;
+                left: -140%;
+            }
+            &:hover {
+                &:before {
+                    left: -17%;
+                }
+            }
+        }
     }
+    
 }
 
