--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -2,7 +2,7 @@ main {
     background-color: $color-white-secondary;
     padding-top: 5rem;
 
-    article {
+    .container>article {
         padding: 6rem 0 4rem;
         position: relative;
         max-width:47rem;
