--- a/css/style.css
+++ b/css/style.css
@@ -94,9 +94,11 @@ footer h3 {
   height: 0.8rem;
 }
 
-article p, article ul {
-  font-size: 20px;
-  line-height: 165%;
+@media screen and (min-width: 992px) {
+  article p, article ul {
+    font-size: 20px;
+    line-height: 160%;
+  }
 }
 article h1 {
   margin-bottom: 2rem;
