--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -93,8 +93,10 @@ footer {
 
 article {
     p, ul {
-        font-size: $font-size-body-bold;
-        line-height: 165%;
+        @media screen and (min-width: 992px) {
+            font-size: $font-size-body-bold;
+            line-height: 160%;
+        }
     }
 
     h1 {
