--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -179,7 +179,9 @@
 
         img {
             width: clamp(310px, 100%, 400px);
-            height: clamp(310px, 90.6vw, 400px);
+            min-height: 310px;
+            height: 90.5vw;
+            max-height: 400px;
         }
 
         iframe {
