--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -7,7 +7,7 @@
     .side-image {
         width: 100%;
         display: flex;
-        align-content: center;
+        align-items: center;
         justify-content: center;
 
         img {
