uc browser optimizing

--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,9 @@ footer .social ul li:not(:first-child) {
   justify-content: center;
 }
 .section .side-image img {
-  width: clamp(310px, 100%, 350px);
+  min-width: 310px;
+  width: 100%;
+  max-width: 350px;
   margin: 5rem auto 0;
 }
 .section.about {
