--- a/css/style.css
+++ b/css/style.css
@@ -414,15 +414,22 @@ footer .social ul li:not(:first-child) {
   box-shadow: 0px 1rem 1.4rem rgba(242, 242, 244, 0.8), 0 8px 4px rgba(242, 242, 244, 0.5);
   margin-top: 1rem;
   width: clamp(310px, 100%, 400px);
+  min-width: 310px;
+  width: 100%;
+  max-width: 400px;
 }
 .messages .card img {
-  width: clamp(310px, 100%, 400px);
+  min-width: 310px;
+  width: 100%;
+  max-width: 400px;
   min-height: 310px;
   height: 90.5vw;
   max-height: 400px;
 }
 .messages .card iframe {
-  width: clamp(310px, 100%, 400px);
+  min-width: 310px;
+  width: 100%;
+  max-width: 400px;
   min-height: 310px;
 }
 .messages .card .text-content {
