--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -177,16 +177,23 @@
         box-shadow: 0px 1rem 1.4rem rgba($color-white-tertiary, 0.8), 0 8px 4px rgba($color-white-tertiary, 0.5);
         margin-top: 1rem;
         width: clamp(310px, 100%, 400px);
+        min-width: 310px;
+        width: 100%;
+        max-width: 400px;
 
         img {
-            width: clamp(310px, 100%, 400px);
+            min-width: 310px;
+            width: 100%;
+            max-width: 400px;            
             min-height: 310px;
             height: 90.5vw;
             max-height: 400px;
         }
 
         iframe {
-            width: clamp(310px, 100%, 400px);
+            min-width: 310px;
+            width: 100%;
+            max-width: 400px;            
             min-height: 310px;
         }
 
