--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -252,7 +252,7 @@
             }
 
             iframe {
-                width: 495px;
+                width: 100%;
                 height: 386px;
             }
 
