--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,19 @@ html {
     scroll-behavior: smooth;
 }
 
+.mob-only {
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
+
+.tab-and-above {
+    display: none;
+    @media screen and (min-width: 768px) {
+        display: inline-block;
+    }
+}
+
 // abstracts
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
