--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Roboto", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
 }
 
@@ -28,7 +28,7 @@ a {
 
 h1, article h1 {
   font-size: 40px;
-  font-family: "Poppins", "Segoe UI", Tahoma, sans-serif;
+  font-family: "Poppins", "Gill Sans", "Gill Sans MT", sans-serif;
   font-weight: 700;
   line-height: 105%;
   letter-spacing: -0.3px;
