--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
     font-size: $font-size-body;
 }
 
@@ -9,7 +9,7 @@ a {
 
 h1, article h1 {
     font-size: $font-size-heading2;
-    font-family: 'Poppins', 'Segoe UI', Tahoma, sans-serif;
+    font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT',sans-serif;
     font-weight: 700;
     line-height: 105%;
     letter-spacing: -0.3px;
