--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ h1, article h1 {
 
 h2 {
   font-size: 32px;
-  font-family: "Poppins", "Segoe UI", Tahoma, sans-serif;
+  font-family: "Poppins", "Gill Sans", "Gill Sans MT", sans-serif;
   font-weight: 700;
 }
 @media only screen and (min-width: 768px) {
@@ -60,7 +60,7 @@ h2 {
 
 h3 {
   font-size: 24px;
-  font-family: "Poppins", "Segoe UI", Tahoma, sans-serif;
+  font-family: "Poppins", "Gill Sans", "Gill Sans MT", sans-serif;
   font-weight: 700;
 }
 
