--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,7 +28,7 @@ h1, article h1 {
 
 h2 {
     font-size: $font-size-heading2-mob;
-    font-family: 'Poppins', 'Segoe UI', Tahoma, sans-serif;
+    font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT',sans-serif;
     font-weight: 700;
 
     @media only screen and (min-width: 768px) {
@@ -38,7 +38,7 @@ h2 {
 
 h3 {
     font-size: $font-size-heading3;
-    font-family: 'Poppins', 'Segoe UI', Tahoma, sans-serif;
+    font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT',sans-serif;
     font-weight: 700;
 }
 
